<resources>
    <string name="app_name">Zoo</string>
    <string name="title_home">Animals</string>
    <string name="title_shop">Shop</string>
    <string name="title_notifications">Notifications</string>
    <string name="bunny">Bunny</string>
    <string name="chicken">Chicken</string>
    <string name="cow">Cow</string>
    <string name="elephant">Elephant</string>
    <string name="hippo">Hippo</string>
    <string name="child">Human Child</string>
    <string name="monkey">Monkey</string>
    <string name="pig">Pig</string>
    <string name="tiger">Tiger</string>
    <string name="turtle">Turtle</string>
    <string name="food">Food</string>
    <string name="hp2" translatable="false">HP: %.1f\nmax: %.1f</string>
    <string name="level" translatable="false">LVL: %d</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="custom">Custom</string>
    <string name="random">Random</string>
    <string name="gender">Gender</string>
    <string name="title_map">Map</string>
    <string name="baby_bones">Baby Bones</string>
    <string name="meat">Meat</string>
    <string name="water">Water</string>
    <string name="pea">Pea</string>
    <string name="bread">Bread</string>
    <string name="donut">Donut</string>
    <string name="animals">Animals</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_kill">Are you sure you want to kill %s?</string>
    <string name="yes">Yes</string>
    <string name="kill_deleted">%s is slaughtered…</string>
    <string name="cancel">Cancel</string>
    <string name="hp_bar" translatable="false">HP Bar</string>
    <string name="attack">Attack</string>
    <string name="rename">Rename</string>
    <string name="new_name">Enter new name</string>
    <string name="ok" translatable="false">OK</string>
    <string name="coin_price">[%d] Coins</string>
    <string name="animal_to_string" formatted="false">%s the %s</string>
    <string name="not_enough_food">You don\'t have enough food!</string>
    <string name="dead">Dead</string>
    <string name="already_dead">%s is already dead!</string>
    <string name="battle">Battle</string>
    <string name="notification_animal_killed">Animal Killed: %s</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="empty_region">There are no animals in this region!</string>
    <string name="animal_added">Animal Added!</string>
    <string name="make">Make</string>
    <string name="notification_animal_added">Animal Added: %s</string>
    <string name="coins_amount">Coins: %d</string>
    <string name="food_amount">Food: %d</string>
    <string name="added">%s added!</string>
    <string name="kill">Kill</string>
    <string name="sex_change">Sex Change</string>
    <string name="feed_10_food">Feed [10 Food]</string>
    <string name="play">Play</string>
    <string name="start_fight">Fight</string>
    <string name="image" translatable="false">image</string>
    <string name="clear">Clear</string>
    <string name="graph">Graph</string>
    <string name="population">Population</string>
    <string name="animal">Animal</string>
    <string name="settings">Settings</string>
    <string name="zoo_version" translatable="false">Zoo [Version 1.0]</string>
    <string name="app_info">Made by: Quentin Correia Email: 481246@student.saxion.nl  This is made for a school project. I am a first year student at Saxion University, studying ICT.  Visiting zoos is one of my favourite past-times, so I tried making it as realistic as possible. Don\'t let your animals die!</string>
    <string name="clear_save">Clear Save</string>
    <string name="demo_mode" translatable="false">Demo Mode</string>
    <string name="n_coins">Not enough coins!</string>
    <string name="notification_removed_from_region">Animal Removed (%s): %s</string>
    <string name="notification_added_region">Added to %s: %s</string>
    <string name="double_animal">You already have this animal!</string>
    <string name="non_binary">Non-binary</string>
    <string name="price">Price: %d</string>
    <string name="bought_food">%d %s bought! [-%d coins]</string>
    <string name="no_animals_to_add">There are no animals to add</string>
    <string name="died_in_battle">%s died!</string>
    <string name="no_pp">You don\'t have enough PP for this move!</string>
    <string name="missed">%s missed!</string>
    <string name="hit">%s HIT! %s took %.2f hp damage.</string>
    <string name="failed">%s failed!</string>
    <string name="def_raised">%s worked! %s\'s def raised.</string>
    <string name="def_lowered">%s worked! %s lowered %s defence.</string>
    <string name="took_hp">%s worked! %s took %d hp</string>
    <string name="lucky_fail">%s luckily failed!</string>
    <string name="hurt_itself">%s %s hurt itself!</string>
    <string name="not_work">%s did not work…</string>
    <string name="brutal_murder">%s brutally murdered %s</string>
    <string name="failed_run">You couldn\'t get away!</string>
    <string name="success_run">You got away!</string>
    <string name="pokemon" translatable="false">Pokémon</string>
    <string name="bag">Bag</string>
    <string name="run">Run</string>
    <string name="def" translatable="false">DEF: %.2f</string>
    <string name="xp" translatable="false">XP: %.2f / %.1f</string>
    <string name="moves">Moves</string>
    <string name="move_type">Move Type</string>
    <string name="description">Description</string>
    <string name="power_points" translatable="false">Power Points</string>
    <string name="infinite_pp" translatable="false">PP ∞</string>
    <string name="opponent_joined">%s has joined your zoo!</string>
    <string name="notification_battle_death">%s died in battle</string>
    <string name="faulty_gun">The gun must be faulty… %s survived.</string>
    <string name="protecting_richard">Richard has come to protect %s!</string>
    <string name="remove_from_region">Remove %d from region? %s</string>
    <string name="kill_multiple">Kill %d animal(s)?\n %s</string>
    <string name="killed_multiple">%d animals killed</string>
    <string name="region">Region</string>
    <string name="choose_region">Choose Region</string>
    <string name="added_to_region">%s added to %s</string>
    <string name="choose_amount">Choose Amount</string>
    <string name="small_potion">Small Potion [+20HP]</string>
    <string name="big_potion">Big Potion [+50HP]</string>
    <string name="small_pp">Small PP [+2]</string>
    <string name="full_pp">Full PP</string>
    <string name="hangman">Hangman</string>
    <string name="word_snake">Word Snake</string>
    <string name="four_in_a_row">Four in a Row</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="higher_or_lower">Higher or Lower</string>
    <string name="restart">Restart</string>
    <string name="stop">Stop</string>
    <string name="game_over">Game Over!</string>
    <string name="play_with_bot">Play with Bot</string>
    <string name="choose_move">Choose Move</string>
    <string name="pp_added">%d PP added to %s</string>
    <string name="hp_potion_used">Used HP Potion [+%d]</string>
    <string name="buy">Buy</string>
    <string name="choose_payment">Choose your payment You have %d Coins and %d Food</string>
    <string name="confirm_run">Are you sure you want to run?</string>
    <string name="fight_against">Fight against %s?</string>
    <string name="menu">Menu</string>
    <string name="regions">Regions</string>
    <string name="confirm_remove_region">Are you sure you want to remove %s? There are %d animal(s) in this region: %s</string>
    <string name="removed_region">Removed: %s</string>
    <string name="ocean">Ocean</string>
    <string name="arctic">Arctic</string>
    <string name="jungle">Jungle</string>
    <string name="hell">Hell</string>
    <string name="forest">Forest</string>
    <string name="desert">Desert</string>
    <string name="city">City</string>
    <string name="island">Island</string>
    <string name="region_deleted">Region Deleted: %s</string>
    <string name="add_region">Add Region</string>
    <string name="region_added">Region [%s] added!</string>
    <string name="n_regions">You have no regions!</string>
    <string name="no_other_regions">You have no other regions</string>
    <string name="switch_region">Switch Region</string>
    <string name="switch_confirm">Switch</string>
    <string name="transfer_region"><![CDATA[Transferred %s\n%s -> %s]]></string>
    <string name="change_move">Change Move</string>
    <string name="demo_mode_confirmation">This is basically cheat mode to see if everything is working. Do you want to cheat?</string>
    <string name="success">Success</string>
    <string name="confirm_clear">Are you sure you want to clear all progress?</string>
    <string name="stop_bot">Stop Bot</string>
    <string name="no">No</string>
    <string name="play_again">Play again?</string>
    <string name="word_is">The word is: %s</string>
    <string name="guess_character">Guess Character</string>
    <string name="guess_word">Guess Word</string>
    <string name="guess">Guess</string>
    <string name="you_died">You died</string>
    <string name="you_guessed_the_word">You guessed the word!</string>
    <string name="you_ran_out_of_time">You ran out of time!</string>
    <string name="renamed_region_notification">Renamed region %s to %s</string>
    <string name="no_animals">You don\'t have any animals</string>
    <string name="no_regions">You don\'t have any regions</string>
    <string name="gain_message">You got %d coins and %.2f xp</string>
    <string name="died_while_playing">Your animal died when playing…</string>
    <string name="score">Score: %d</string>
    <string name="higher">Higher</string>
    <string name="lower">Lower</string>
    <string name="hl_info">Lowest is 0 | Highest is 10</string>
    <string name="bet_coins">Bet Coins</string>
    <string name="struggle_move">%s doesn\'t have any pp left… %s used struggle!</string>
    <string name="filled_hp">%s has had enough.</string>
    <string name="refilled_pp">PP Refilled</string>
    <string name="food_price">[%d] Food</string>
    <string name="bang">BANG! %s died!</string>
    <string name="change_move_to_random">Change your move [%s] for a random one</string>
    <string name="soft_locked">Soft Locked</string>
    <string name="soft_lock_msg">With 0 animals and no money to buy a new one, you have successfully soft-locked yourself!</string>
</resources>
