<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="smallPotion"
            android:text="@string/small_potion"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="bigPotion"
            android:text="@string/big_potion"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="smallPP"
            android:text="@string/small_pp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fullPP"
            android:text="@string/full_pp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>