<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/animalName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Gerald" />

    <TextView
        android:id="@+id/animalType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalName2"
        tools:text="Human" />

    <TextView
        android:id="@+id/animalGender2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalType2"
        tools:text="Male" />

    <TextView
        android:id="@+id/animalHP2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/animalImage2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalType2"
        tools:text="HP: 12.3\nmax: 100" />

    <TextView
        android:id="@+id/animalLevel2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/animalImage2"
        app:layout_constraintTop_toBottomOf="@+id/animalType2"
        tools:text="LVL: 5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="killAnimal"
            android:text="@string/kill"
            android:textColor="@android:color/holo_red_light" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="genderChangeAnimal"
            android:text="@string/sex_change" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="renameAnimal"
            android:text="@string/rename" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="feedAnimal"
            android:text="@string/feed_10_food" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playWithAnimal"
            android:text="@string/play" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showMoves"
            android:text="@string/moves" />

    </LinearLayout>

    <ImageView
        android:id="@+id/animalImage2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/animalXP2"
        app:layout_constraintEnd_toStartOf="@+id/animalLevel2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/animalHP2"
        app:layout_constraintTop_toBottomOf="@+id/animalGender2"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/animalXP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="XP: 38.52/100.0" />
</androidx.constraintlayout.widget.ConstraintLayout>