<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.games.HigherOrLowerActivity">

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hl_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:textAlignment="center"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information"
        tools:text="5" />

    <TextView
        android:id="@+id/lastNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toTopOf="@+id/number"
        tools:text="3" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/bet_coins"
        app:layout_constraintBottom_toTopOf="@+id/betAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:id="@+id/betAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/customBet"
        app:layout_constraintEnd_toEndOf="@+id/higher"
        app:layout_constraintStart_toStartOf="@+id/lower" />

    <EditText
        android:id="@+id/customBet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/bet_coins"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/lower"
        app:layout_constraintEnd_toEndOf="@+id/number"
        app:layout_constraintStart_toStartOf="@+id/number" />

    <Button
        android:id="@+id/lower"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:onClick="lower"
        android:text="@string/lower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/higher"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/number" />

    <Button
        android:id="@+id/higher"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="higher"
        android:text="@string/higher"
        app:layout_constraintBottom_toBottomOf="@+id/lower"
        app:layout_constraintEnd_toEndOf="@+id/number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lower"
        app:layout_constraintTop_toTopOf="@+id/lower" />

</androidx.constraintlayout.widget.ConstraintLayout>